--- a/gb/nsc413_2.md
+++ b/gb/nsc413_2.md
@@ -1,4 +1,10 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/aiaxj298/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/aiaxj298/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801312.md#1" target="_blank">【武汉肺炎 | 持续更新】英权威机构推测：实际感染者恐逾1700人</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801312.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1193183155-1-150x120.jpg" align ="left"></a>中国武汉去年12月爆发不明肺炎，今年1月8日确定为新型冠状病毒，世界卫生组织13日将此病毒定名为“2019新型冠状病毒”（2019－nCoV）。目前出现2例死亡病例，该新型冠状病毒已有扩散趋势，泰国和日本近日先后确诊个案，患者皆到过武汉。但在中国仍只有武汉有疫情消息。本文将持续更新关于武汉肺炎疫情的最新进展。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 9:18 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801405.md#1" target="_blank">浙江卫视主持收恐吓包裹 或与高以翔猝逝有关</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801405.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1604100956401487-150x120.jpg" align ="left"></a>35岁的台湾艺人高以翔去年录制大陆真人秀《追我吧》猝逝，曾传出该节目的主持人华少当时对观众说“已恢复意识”，遭网友炮轰。17日，华少在微博透露，前一天他连续收到两份匿名快递的包裹，“里面的东西让我非常震惊和害怕”，并表示已向警局报案。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 8:58 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800810.md#1" target="_blank">台湾大选反共潮高涨 鼓舞中港人民争自由</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800810.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/PO_X5511-150x120.jpg" align ="left"></a>2020年中华民国总统大选，蔡英文获得压倒性胜利。民调显示，台湾选举受香港反送中事件影响最大。专家说，投票结果表达台湾向中共说不，反共潮高涨捍卫民主自由的意志，也鼓舞香港人、中国大陆人争取自由民主。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 8:22 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801695.md#1" target="_blank">大陆明星饮品下架 天喔国际停牌16个月</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801695.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2-9-150x120.png" align ="left"></a>天喔国际旗下的多款明星代言饮品目前已在大陆多地下架。天喔国际已停牌16个月，近日在港交所发布了最新的清盘呈请公告，并正在讨论重组事宜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 7:59 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801609.md#1" target="_blank">高校将推“强基计划” 学者：维持中共统治</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801609.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/20170825-SULIN-GAOKAO-600x400-150x120.jpg" align ="left"></a>中共教育部日前发文，从今年起取消高校自主招生，而在部分高校试点“强基计划”，选拔培养服务于国家重大战略需求的人才。评论表示，在美国对中共进行高科技封锁下，中共试图实施强基计划来解决困境，维持中共统治。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 7:55 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801575.md#1" target="_blank">中美协议对照美方首次要价 五大差异在这里</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801575.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/3a55009168a7966930881578a61aa6a9-150x120.jpg" align ="left"></a>等了近18个月，美中终于达成第一阶段协议。对照两年前美国在第一次谈判时提出的要价清单，两者至少有五大差异。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 7:44 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801598.md#1" target="_blank">贸易协议签署后 官媒热炒空姐炫富开车游故宫</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801598.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/851e9ea68d96f43e3450e6f7c72814b3-150x120.jpg" align ="left"></a>美中签署了第一阶段贸易协议后，一则“空姐炫富开豪车游故宫”的消息被中共多家官媒报导后迅速刷屏，几乎取代了中美贸易协议的重大消息而成为网络热点话题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 7:21 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801398.md#1" target="_blank">美报告曝光：中共企图影响全球媒体新招术</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801398.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/1904050650032378-150x120.jpg" align ="left"></a>多年以来，中国（中共）通过境外媒体传播其故事和宣传。“自由之家”发布报告称，自2017年以来，这些中共的影响力运动已采用了新策略来加速进行，以及其它国家如何反击中共的媒体渗透和霸凌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 7:18 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801573.md#1" target="_blank">周晓辉：川普下紧箍咒 中南海解除只有一条路</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801573.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NQ6KR-2-600x400-1-150x120.jpg" align ="left"></a>目前中南海签署第一阶段协议后，不想遭受灭顶之灾，惟有一条路是顺应天意和历史大势，遵守协议内容，推动经济政治改革，才可解除戴在头上的紧箍咒，也方有一线生机。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 7:08 AM							</td></tr>
@@ -27,14 +33,8 @@
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800738.md#1" target="_blank">肺炎疫情疑被隐瞒 武汉网民指患者多到躺地上</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800738.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/wuhan-pneumonia-chinese-medicine3_1586627872-150x120.jpg" align ="left"></a>湖北武汉去年底起爆发不明原因肺炎，至今已两人死亡，日本、泰国也出现感染病例，但中国境内至今却只有武汉公布疫情。当地网友近日表示，医院人多到躺在走廊地上，医疗资源明显不足。
 
 正值传统中国新年节前夕，中国返乡潮已进入第7天，庞大的人潮往返让民众担忧将加速疫情扩散。不少人在网上发文质疑“只出国不出省，是个爱国病毒”、“病毒都传染到泰国和日本去了，大陆上却不传.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 8:44 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799726.md#1" target="_blank">面临诸多灰犀牛 大陆多省下调今年GDP目标</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799726.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/10/090609180407100160-150x120.jpg" align ="left"></a>大陆多个省市近来陆续公布了今年GDP增长目标，相比去年，这些省市基本都下调了GDP增幅，显示大陆地方当局面对诸多灰犀牛，对今年的经济增长信心不强。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 8:25 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800674.md#1" target="_blank">网友爆光上海人社局12333热线压榨员工</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800674.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/11-6-150x120.jpg" align ="left"></a>上海市人力资源和社会保障局有一条热线电话，名叫“12333知询通”，主要是为上海民众提供劳动保障法律法规咨询、政策业务咨询，受理劳动保障监察举报、政风行风投诉、提供社会保障账户查询、劳动保险账户查询、劳动保障办事指南、电子邮件处理、电话办事、电话调查、舆情反馈、英语服务等多元化服务。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 8:23 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800646.md#1" target="_blank">武汉肺炎致2死 香港共发现81宗疑似个案</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800646.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/bded1d7c8eb1b39b5b255fd1a87288fa-150x120.jpg" align ="left"></a>武汉的新型冠状病毒引起的肺炎，再增1例死亡。香港截止到今天（17日）共发现81宗疑似武汉新型冠状病毒个案。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 8:14 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800628.md#1" target="_blank">美参院通过“印太合作法案”对抗中共霸权</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800628.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/11/8591139a8e8fe654e2491496e32fc3cd-150x120.jpg" align ="left"></a>美国参议院一致通过“2019年印太合作法案”，对抗中共的地区霸权。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 8:00 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800041.md#1" target="_blank">伊朗人不踩美国和以色列国旗 网民对比中国</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800041.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1760730-150x120.jpg" align ="left"></a>在伊朗政府承认“误击”乌克兰航空公司的客机之后，大批民众走上街头抗议。近日有画面显示，伊朗大多数民众避免踩踏地面上漆画的美国和以色列国旗。对此，美国总统川普（特朗普）称赞“大有进步”，另有网民表示，相较于中共独裁政权，伊朗对民众的洗脑显然略逊一筹。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 7:48 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800324.md#1" target="_blank">赵紫阳忌日亲友旧部拜祭 墓园现场戒备森严</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800324.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/9671B9A1-F849-4420-A98B-DA15BBD2441A_w1023_r1_s-150x120.jpg" align ="left"></a>今天（1月17日）是前中共总书记赵紫阳逝世15周年，亦是赵紫阳与妻子梁伯琪自去年10月安葬在北京昌平区民间公墓天寿园后，其家属及旧部首次在忌日到墓园拜祭，天寿园附近守卫森严。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 6:12 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801540.md#1" target="_blank">制片人爆大陆限薪令：头部演员片酬降九成</a><br></h3>身兼制片人和编剧的白一骢，日前受访时谈及大陆演员薪酬的变化。他透露：“头部演员的片酬降了九成，一般艺人则比巅峰时期至少降了两三倍。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 8:52 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798865.md#1" target="_blank">甘肃庆阳市委党校副校长李光照被举报</a><br></h3>甘肃省庆阳市委党校副校长李光照极尽恶毒诬蔑法轮功，其在宁县任政法委书记期间，指挥当地公检法司非法骚扰、关押、劳教，办洗脑班迫害法轮功学员，现被大陆民众举报到海外明慧网。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 4:52 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801511.md#1" target="_blank">台专家完成武汉疫情查访 揭两起家庭群聚感染</a><br></h3>台湾专家完成中国武汉肺炎疫情查访，专家今天说，武汉有3成病例无海鲜市场接触史，临床初判有潜在疾病、肥胖者是重症高风险群。因主要感染源不明，疾管署提升武汉旅游警示。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 4:06 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800435.md#1" target="_blank">中共纪检系统官员向大老虎泄密 并为其抹案</a><br></h3>日前，中共官媒专题片披露了吴文广、孟弘毅等纪检系统“内鬼”的贪污细节。两人分别与已落马的“大老虎”虞海燕案、王珉案有关。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 6:48 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc413.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc413_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/aiaxj298/djy/blob/master/gb/nsc413_2.md#1<br><a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc413_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/aiaxj298/djy/blob/master/gb/nsc413_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_2.htm">http://www.epochtimes.com/gb/nsc413_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
