--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -31,7 +31,7 @@
 </td><td VALIGN=TOP width="352">
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11803796.md#1">武汉肺炎内地扩散  深圳上海传出疑似病例</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803448.md#1">人死7年仍在收钱 中共民政部募捐黑幕遭起底</a><br>
-<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803438.md#1">中共特工美课堂收集情报 中国留学生担忧</a><br>
+<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803438.md#1">中共特工美课堂搜集情报 中国留学生担忧</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803423.md#1">A股监狱风云续演 身家40亿实控人被捕</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803420.md#1">分析：佛州成中共间谍活动重点目标</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803219.md#1">【新闻看点】武汉肺炎扩散 专家：感染1700人</a><br>
@@ -92,7 +92,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/aiaxj298/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 350,079,305 人
+- 共 350,085,140 人
 ```
 </strong>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a><br>
