--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -3,11 +3,11 @@
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/12/n11788275.md#1">114个“耳光”搧向国台办 李敖儿子微博被封</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11796241.md#1">伊朗在变天 中共或失去打击美国的王牌</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/14/n11793300.md#1">【新闻看点】中美初阶段贸协曝光 北京大让步</a><br>
-<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/12/n11786676.md#1">所属党立委选举失利 陈水扁：从此退出政坛</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/12/n11788541.md#1">中共官员变换护照身份 逃避人权法案制裁</a><br>
+<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798622.md#1">【十字路口】中共叫嚷武统台湾 专家解析后果（上）</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/13/n11791100.md#1">北京昌平六百特警凌晨偷袭强拆 业主遭群殴</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11793980.md#1">【唐靖远快评】武统台湾？中共恐有心无力</a><br>
-<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798622.md#1">【十字路口】中共叫嚷武统台湾 专家解析后果（上）</a><br>
+<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/13/n11790802.md#1">中共外交部胡言乱语实录</a><br>
 <br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803257.md#1">颜丹：中国“人均GDP过万”为何毫无意义？</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803290.md#1">大成漫画：开口吓傻邪党官</a><br>
