--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11793980.md#1">【唐靖远快评】武统台湾？中共恐有心无力</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/13/n11790802.md#1">中共外交部胡言乱语实录</a><br>
 <br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803302.md#1">周晓辉：习近平未去美国签约背后隐藏的危机</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803257.md#1">颜丹：中国“人均GDP过万”为何毫无意义？</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803290.md#1">大成漫画：开口吓傻邪党官</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11802918.md#1">张林：中共魔手把慈善机构变成诈骗团伙</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800656.md#1">陈思敏：京沪高铁不缺钱为何还要上市</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799968.md#1">俞晓薇：韩国和大陆法轮功学员境遇两重天</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800085.md#1">陆言：共产党离灭亡的终点还有多远？</a><br>
-<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/14/n11793721.md#1">传记《穿透阴霾的舞蹈》读后感</a><br>
 <br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
@@ -30,6 +30,7 @@
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/9/n11778295.md#1">伊朗导弹袭基地 美国国防部披露更多细节</a><br>
 <br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11803938.md#1">【翻墙必看】红三代轧故宫 官媒提三大疑问</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11803788.md#1">中共军委政法委书记换人</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11803796.md#1">武汉肺炎内地扩散  深圳上海传出疑似病例</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/19/n11803564.md#1">红三代轧故宫发酵 后花园开到美国富人区</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803344.md#1">新生儿创新低 中国人口危机迫在眉睫</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803218.md#1">金玉红遭酷刑 黑龙江610阻律师会见</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803287.md#1">川普政府推动下 美国最早孔子学院将关闭</a><br>
-<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803302.md#1">周晓辉：习近平未去美国签约背后隐藏的危机</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798622.md#1">【十字路口】中共叫嚷武统台湾 专家解析后果（上）</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803234.md#1">【热点互动】美中贸易停火期能维持多久?</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803294.md#1">将习近平名字译成不雅称呼 脸书发声明道歉</a><br>
